fixed buysellmeu input color error

--- a/cryptosite/.env
+++ b/cryptosite/.env
@@ -8,3 +8,4 @@ db_uri=postgres://nravpnzihjygsy:a5790322a2522d6dbc6ee2000737154de1738cce6224484
 crypto_api_url=http://api.coincap.io/v2/assets
 allowed_emails=aryamanbhute@gmail.com/jingrode@gmail.com/
 season_start=2022,8,1
+localhosts=abhute-computer
